# breakglass

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  mockup.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/: pull_request_template.md
docs/: PLAN.md
docs/archive/: BreakGlass.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  main.rs  models.rs
src/components/: AppDetail.tsx  AppsModule.tsx  Attachments.tsx  CodeBlock.tsx  ContactCard.tsx  ContactForm.tsx  ContactView.tsx  ContactsGrid.tsx  ContactsModule.tsx  ContentRouter.tsx  DetailPane.tsx  Editor.tsx  EntryCard.tsx  EntryList.tsx  EntryView.tsx  ExportDialog.tsx  FolderView.tsx  HomeView.tsx  ListRowMenu.tsx  ModuleFolderChips.tsx  MoveDialog.tsx  PinnedView.tsx  SearchModal.tsx  SettingsView.tsx  Sidebar.tsx  SiteLinksModule.tsx  StatusBadge.tsx  StructuredModule.tsx  TitleBar.tsx  TopView.tsx  WeeklySections.tsx
src/context/: AppContext.tsx
src/lib/: categories.ts  dialogs.tsx  invoke.ts  kinds.ts  utils.ts
src/types/: index.ts
