[package]
name = "breakglass"
version = "1.6.1"
description = "Personal IT reference and runbook tool"
authors = ["Marsh Jarvis <marshjarv@gmail.com>"]
license = "MIT"
repository = "https://github.com/giftedloser/breakglass"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
base64 = "0.22"
